--- a/missing/pyproject.toml
+++ b/missing/pyproject.toml
@@ -6,6 +6,7 @@ authors = []
 
 [tool.poetry.dependencies]
 python = "^3.7"
+intreehooks = "*"
 pytest-runner = "*"
 
 [tool.poetry.dev-dependencies]
